K8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
    tier: frontend
spec:
  
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        tier: frontend
    spec:
      containers:
      - name: web
        image: robotshop/rs-web:2.1.0
       
        ports:
        - containerPort: 8080
